--- a/login.css
+++ b/login.css
@@ -44,7 +44,7 @@ body{
     text-shadow: 0.1em 0.2em 0.3em rgba(255, 255, 255, 0.315) ;
 }
 
-#login-st::placeholder:hover{
+#login-st:hover{
 color: rgb(36, 34, 34);
 }
 
@@ -60,6 +60,10 @@ color: rgb(36, 34, 34);
     color: white;
     text-align: center;
     font-family: SoDoSans-Regular;
+}
+
+#senha-st:hover{
+color: rgb(36, 34, 34);
 }
 
 #senha-st::placeholder{
